<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">QBTiempo</string>
    <string name="action_settings">Configuración</string>
    <string name="Ingresar">Ingresar</string>
    <string name="NombreUsuario">Nombre de Usuario</string>
    <string name="pass">Contraseña</string>
    <string name="cargarpreferencias">Cargar Preferencias</string>
    <string name="SincronizarBase">Sincronizar Base</string>
    <string name="Configuracion">Configuración</string>
    <string name="host">Host</string>
    <string name="puerto">Puerto</string>
    <string name="Usuario">Usuario</string>
    <string name="contraseña">Contraseña</string>
    <string name="ProbarConexion">Probar Conexion</string>
    <string name="basedatos">Base de Datos</string>
    <string name="savepref">Guardar Preferencias</string>
    <string name="version_1_0_0_qbtiempo">Version 1.0.0 QBtiempo</string>
    <string name="registro_actividades">Registro de Actividades</string>
    <string name="btnregistro_clases">Registro de Actividades por Clases</string>
    <string name="titulo_registro_actividades">Registro de Actividades</string>
    <string name="clientes">Cliente</string>
    <string name="departamento">Departamento</string>
    <string name="fecha">Fecha</string>
    <string name="elegir">Elegir</string>
    <string name="empleado">Empleado</string>
    <string name="horas">Horas</string>
    <string name="notas">Notas</string>
    <string name="nomina">Nomina</string>
    <string name="actividad">Actividad</string>
    <string name="guardar">Guardar</string>

    <string name="lista_vacia">Sin Datos</string>
    <string name="title_activity_hipoteca_formulario">Hipoteca Formulario</string>
    <string name="menu_preferencias">Configuración</string>
    <string name="menu_crear">Nuevo</string>
    <string name="menu_editar">Editar</string>
    <string name="menu_guardar">Guardar</string>
    <string name="menu_cancelar">Cancelar</string>
    <string name="menu_eliminar">Eliminar</string>
    <string name="menu_visualizar">Ver</string>
    <string name="label_nombre_hipoteca">Nombre:</string>
    <string name="label_condiciones">Condiciones:</string>
    <string name="label_contacto">Contacto:</string>
    <string name="label_telefono">Teléfono:</string>
    <string name="label_email">E-Mail:</string>
    <string name="label_observaciones">Observaciones:</string>
    <string name="label_pasivo">Pasivo</string>
    <string name="label_situacion">Situación</string>

    <string name="boton_guardar">Guardar</string>
    <string name="boton_cancelar">Cancelar</string>

    <string name="hipoteca_crear_titulo">Nueva Hipoteca</string>
    <string name="hipoteca_crear_confirmacion">Hipoteca creada</string>
    <string name="hipoteca_editar_titulo">Editar Hipoteca</string>
    <string name="hipoteca_editar_confirmacion">Hipoteca modificada</string>
    <string name="hipoteca_eliminar_titulo">Eliminar Hipoteca</string>
    <string name="hipoteca_eliminar_mensaje">¿Seguro que desea eliminar la Hipoteca?</string>
    <string name="hipoteca_eliminar_confirmacion">Hipoteca eliminada</string>
    <string name="title_activity_cargar_registro_actividades">CargarRegistroActividades</string>

    <string name="hello">Hello World, NotepadLitleActivity!</string>

    <string name="leer">Mostrar Notas</string>
    <string name="crear">Crear Nota</string>

    <string name="cancelar">Cancelar</string>
    <string name="titulo">Titulo</string>
    <string name="editar">...</string>
    <string name="empleadoporgrupo">Empleado por Grupo</string>
    <string name="desde">Desde</string>
    <string name="Hasta">Hasta</string>
    <string name="BuscarImagen">Buscar</string>
    <string name="ElegirFecha">Elegir Fecha</string>
    <string name="listaactivdadesregistradas">Lista de Actividades Registradas</string>
    <string name="sincronizar">Sincronizar</string>
    <string name="title_activity_sincronizar">Sincronizar</string>
    <string name="SeleccionarTodos">Seleccionar Todos</string>
    <string name="Deseleccionar">Deseleccionar Todos</string>
    <string name="btnSincronizar">Sincronizar</string>
    <string name="TituloSincronizar">Sincronizar</string>
    <string name="nombrempleado">Nombre Empleado</string>
    <string name="act_registrada">Actividad Registrada</string>
    <string name="enviarDatos">Enviar</string>
    <string name="TraerDatos">Traer Datos</string>
    <string name="title_activity_actualizar_datos">ActualizarDatos</string>
    <string name="tituloActualizarDatosRegistroClases">Actualizar Datos De Registro Actividades</string>

</resources>
