<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent" android:layout_height="match_parent">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/Configuracion"
        android:id="@+id/textView"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="22dp" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/txthost"
        android:layout_below="@+id/textView2"
        android:layout_alignRight="@+id/txtpuerto"
        android:layout_alignEnd="@+id/txtpuerto"
        android:layout_alignLeft="@+id/txtpuerto"
        android:layout_alignStart="@+id/txtpuerto" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/host"
        android:id="@+id/textView2"
        android:layout_marginTop="37dp"
        android:layout_below="@+id/textView"
        android:layout_centerHorizontal="true" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/txtpuerto"
        android:layout_below="@+id/textView3"
        android:layout_alignRight="@+id/txtusuario"
        android:layout_alignEnd="@+id/txtusuario"
        android:layout_alignLeft="@+id/txtusuario"
        android:layout_alignStart="@+id/txtusuario" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/puerto"
        android:id="@+id/textView3"
        android:layout_below="@+id/txthost"
        android:layout_alignLeft="@+id/textView4"
        android:layout_alignStart="@+id/textView4" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/Usuario"
        android:id="@+id/textView4"
        android:layout_below="@+id/txtpuerto"
        android:layout_centerHorizontal="true" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/txtusuario"
        android:layout_below="@+id/textView4"
        android:layout_alignRight="@+id/txtpass"
        android:layout_alignEnd="@+id/txtpass"
        android:layout_alignLeft="@+id/txtpass"
        android:layout_alignStart="@+id/txtpass" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/contraseña"
        android:id="@+id/textView5"
        android:layout_below="@+id/txtusuario"
        android:layout_centerHorizontal="true" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="textPassword"
        android:ems="10"
        android:id="@+id/txtpass"
        android:layout_below="@+id/textView5"
        android:layout_centerHorizontal="true" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/basedatos"
        android:id="@+id/textView6"
        android:layout_below="@+id/txtpass"
        android:layout_alignRight="@+id/textView5"
        android:layout_alignEnd="@+id/textView5" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/txtbase"
        android:layout_below="@+id/textView6"
        android:layout_alignLeft="@+id/txtpass"
        android:layout_alignStart="@+id/txtpass"
        android:layout_alignRight="@+id/txtpass"
        android:layout_alignEnd="@+id/txtpass" />

    <Button
        style="?android:attr/buttonStyleSmall"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/SincronizarBase"
        android:id="@+id/btnsinc"
        android:textSize="12dp"
        android:layout_above="@+id/btntestconec"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_toLeftOf="@+id/textView2"
        android:layout_toStartOf="@+id/textView2" />

    <Button
        style="?android:attr/buttonStyleSmall"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/cargarpreferencias"
        android:id="@+id/btncargar_prefe"
        android:textSize="12dp"
        android:layout_alignParentBottom="true"
        android:layout_toRightOf="@+id/textView4"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/savepref"
        android:id="@+id/btnsavepref"
        android:textSize="12dp"
        android:layout_above="@+id/btncargar_prefe"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:layout_alignLeft="@+id/btncargar_prefe"
        android:layout_alignStart="@+id/btncargar_prefe" />

    <Button
        style="?android:attr/buttonStyleSmall"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/ProbarConexion"
        android:id="@+id/btntestconec"
        android:textSize="12dp"
        android:layout_alignTop="@+id/btncargar_prefe"
        android:layout_alignRight="@+id/btnsinc"
        android:layout_alignEnd="@+id/btnsinc"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <ProgressBar
        style="?android:attr/progressBarStyleLarge"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/progressBar"
        android:layout_above="@+id/btnsinc"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_alignRight="@+id/btnsavepref"
        android:layout_alignEnd="@+id/btnsavepref" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="Medium Text"
        android:id="@+id/txterror"
        android:layout_below="@+id/txtbase"
        android:layout_alignRight="@+id/textView6"
        android:layout_alignEnd="@+id/textView6" />

</RelativeLayout>
