<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin" tools:context=".MainActivity"
    android:background="@drawable/fondo1">

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/Ingresar"
        android:id="@+id/btnIngresar"
        android:layout_below="@+id/txtpass"
        android:layout_alignRight="@+id/lbpass"
        android:layout_alignEnd="@+id/lbpass"
        android:layout_marginTop="68dp" />

    <Spinner
        android:layout_width="350dp"
        android:layout_height="75dp"
        android:id="@+id/SP_usuarios"
        android:layout_centerVertical="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:textAlignment="center" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/NombreUsuario"
        android:id="@+id/Lbnombre"
        android:layout_above="@+id/SP_usuarios"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="31dp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/pass"
        android:id="@+id/lbpass"
        android:layout_below="@+id/SP_usuarios"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="35dp" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="textPassword"
        android:ems="10"
        android:id="@+id/txtpass"
        android:layout_marginTop="31dp"
        android:layout_below="@+id/lbpass"
        android:layout_centerHorizontal="true" />

</RelativeLayout>
